[gd_scene load_steps=15 format=3 uid="uid://dl8k8vj01hhjj"]

[ext_resource type="Script" uid="uid://cmua61pcxrhb" path="res://scripts/user_interface/level_inspect.gd" id="1_aoj50"]
[ext_resource type="Texture2D" uid="uid://by12dxftlylwu" path="res://assets/ui/stars_atlas.tres" id="2_6dotb"]
[ext_resource type="StyleBox" uid="uid://byr8amhnwal4k" path="res://assets/resources/themes/panel.tres" id="2_56b6k"]
[ext_resource type="StyleBox" uid="uid://d3ep4nluuoc3h" path="res://assets/resources/themes/backdrop_panel.tres" id="2_rmjy0"]
[ext_resource type="Shader" uid="uid://bi7c682y5yhkv" path="res://scripts/shaders/Stars.gdshader" id="3_2dflr"]
[ext_resource type="Theme" uid="uid://d018ofb37nf7u" path="res://assets/resources/themes/default.tres" id="3_3an21"]
[ext_resource type="Script" uid="uid://dutxq6mimctej" path="res://scripts/user_interface/animated_panel.gd" id="4_0o6mq"]
[ext_resource type="Texture2D" uid="uid://fhgbromk22a0" path="res://assets/ui/unlock_icon.png" id="4_hx5r7"]
[ext_resource type="Texture2D" uid="uid://c7l47lki55rh1" path="res://assets/ui/editor_icon.png" id="5_rcr73"]
[ext_resource type="Texture2D" uid="uid://cexydgocdclnk" path="res://assets/ui/play_icon.png" id="6_aqsoc"]
[ext_resource type="Theme" uid="uid://dujdfelccpvvo" path="res://assets/resources/themes/primary.tres" id="8_el7sx"]
[ext_resource type="StyleBox" uid="uid://bma3q5vfkjqlx" path="res://assets/resources/themes/round_button.tres" id="10_32ph3"]
[ext_resource type="Texture2D" uid="uid://jopy2aap5hw" path="res://assets/ui/x_icon.png" id="11_pt48p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rfrax"]
shader = ExtResource("3_2dflr")
shader_parameter/base_color = Color(0.992157, 0.937255, 0.768627, 1)

[node name="LevelInspect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoj50")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_rmjy0")

[node name="Panel" type="Panel" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -300.0
offset_right = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2_56b6k")
script = ExtResource("4_0o6mq")

[node name="MarginContainer" type="MarginContainer" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="LevelName" type="Label" parent="Background/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_3an21")
text = "Level 01"
horizontal_alignment = 1

[node name="Stars" type="TextureRect" parent="Background/Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_rfrax")
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_6dotb")
expand_mode = 1
stretch_mode = 5

[node name="Controls" type="HBoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 55
alignment = 1

[node name="UnlockBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
focus_mode = 0
theme = ExtResource("3_3an21")
theme_override_constants/icon_max_width = 128
theme_override_font_sizes/font_size = 100
disabled = true
icon = ExtResource("4_hx5r7")

[node name="BuildBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
focus_mode = 0
theme = ExtResource("3_3an21")
theme_override_constants/icon_max_width = 128
icon = ExtResource("5_rcr73")

[node name="PlayBtn" type="Button" parent="Background/Panel/MarginContainer/VBoxContainer/Controls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
theme = ExtResource("8_el7sx")
theme_override_constants/icon_max_width = 128
icon = ExtResource("6_aqsoc")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Background/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="Background/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExitBtn" type="Button" parent="Background/Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -45.0
offset_bottom = 45.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/icon_normal_color = Color(0.972549, 0.196078, 0.196078, 1)
theme_override_colors/icon_pressed_color = Color(0.972549, 0.196078, 0.196078, 1)
theme_override_colors/icon_hover_color = Color(0.972549, 0.196078, 0.196078, 1)
theme_override_constants/icon_max_width = 32
theme_override_styles/hover = ExtResource("10_32ph3")
theme_override_styles/pressed = ExtResource("10_32ph3")
theme_override_styles/normal = ExtResource("10_32ph3")
icon = ExtResource("11_pt48p")
icon_alignment = 1

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/UnlockBtn" to="." method="_on_unlock_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/BuildBtn" to="." method="_on_build_btn_pressed"]
[connection signal="pressed" from="Background/Panel/MarginContainer/VBoxContainer/Controls/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="Background/Panel/ExitBtn" to="." method="_on_exit_btn_pressed"]
